# cpp-practice

./: README.md
game-of-life/: CMakeLists.txt  README.md
game-of-life/include/: GameOfLife.h
game-of-life/src/: GameOfLife.cpp  main.cpp
